wdt-prod/wdt-prod-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wdt-prod-package-service
  namespace: wdt-prod
spec:
  selector:
    app: wdt-prod-package
  type: NodePort
  ports:
  - port: 16000
    targetPort: 16000
    nodePort: 32600
