wdt-prod/wdt-prod-static-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wdt-prod-tdmp-static-service
  namespace: wdt-prod
spec:
  ports:
    - port: 80
  selector:
    app: wdt-prod-tdmp-static
